Add Lex support

--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                             <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
+                            <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="analytics">
@@ -807,7 +808,8 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
                                                     <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
-                                                    <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a>
+                                                    <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
+                                                    <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1609,6 +1611,7 @@
         <script src="js/services/kendra.js"></script>
         <script src="js/services/singlesignon.js"></script>
         <script src="js/services/appflow.js"></script>
+        <script src="js/services/lex.js"></script>
         
         <script src="js/app.js"></script>
     </body>
