--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                         <ul>
                             <li><a href="#section-developertools-codestar"><span class="lbl">CodeStar</span></a></li>
                             <li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>
+                            <li><a href="#section-developertools-codeartifact"><span class="lbl">CodeArtifact</span></a></li>
                             <li><a href="#section-developertools-codebuild"><span class="lbl">CodeBuild</span></a></li>
                             <li><a href="#section-developertools-codedeploy"><span class="lbl">CodeDeploy</span></a></li>
                             <li><a href="#section-developertools-codepipeline"><span class="lbl">CodePipeline</span></a></li>
@@ -715,6 +716,7 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-developertools-codestar" style="font-weight: 600;">CodeStar</a><br />
                                                     <a href="#section-developertools-codecommit" style="font-weight: 600;">CodeCommit</a><br />
+                                                    <a href="#section-developertools-codeartifact" style="font-weight: 600;">CodeArtifact</a><br />
                                                     <a href="#section-developertools-codebuild" style="font-weight: 600;">CodeBuild</a><br />
                                                     <a href="#section-developertools-codedeploy" style="font-weight: 600;">CodeDeploy</a><br />
                                                     <a href="#section-developertools-codepipeline" style="font-weight: 600;">CodePipeline</a><br />
@@ -1612,6 +1614,7 @@
         <script src="js/services/singlesignon.js"></script>
         <script src="js/services/appflow.js"></script>
         <script src="js/services/lex.js"></script>
+        <script src="js/services/codeartifact.js"></script>
         
         <script src="js/app.js"></script>
     </body>
