--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                             <li><a href="#section-database-redshift"><span class="lbl">Redshift</span></a></li>
                             <li><a href="#section-database-qldb"><span class="lbl">QLDB</span></a></li>
                             <li><a href="#section-database-documentdb"><span class="lbl">DocumentDB</span></a></li>
+                            <li><a href="#section-database-timestream"><span class="lbl">Timestream</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub" data-category="migrationandtransfer">
@@ -669,7 +670,8 @@
                                                     <a href="#section-database-neptune" style="font-weight: 600;">Neptune</a><br />
                                                     <a href="#section-database-redshift" style="font-weight: 600;">Redshift</a><br />
                                                     <a href="#section-database-qldb" style="font-weight: 600;">QLDB</a><br />
-                                                    <a href="#section-database-documentdb" style="font-weight: 600;">DocumentDB</a>
+                                                    <a href="#section-database-documentdb" style="font-weight: 600;">DocumentDB</a><br />
+                                                    <a href="#section-database-timestream" style="font-weight: 600;">Timestream</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1615,6 +1617,7 @@
         <script src="js/services/appflow.js"></script>
         <script src="js/services/lex.js"></script>
         <script src="js/services/codeartifact.js"></script>
+        <script src="js/services/timestream.js"></script>
         
         <script src="js/app.js"></script>
     </body>
