More fixes for default resources

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <li class="red with-sub" data-category="mobile">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Mobile_light-bg.png" style="width: 16px; height: 16px;" /></i>
-                            <span class="lbl">Mobile</span>
+                            <span class="lbl">Front-end Web &amp; Mobile</span>
                         </span>
                         <ul>
                             <li><a href="#section-mobile-amplify"><span class="lbl">Amplify</span></a></li>
@@ -881,7 +881,7 @@
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
                                                 <td><img src="img/aws/Mobile_light-bg.png" style="width: 48px; height: 48px;" /></td>
-                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Mobile</h4></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Front-end Web &amp; Mobile</h4></td>
                                             </tr>
                                             <tr>
                                                 <td>&nbsp;</td>
