Add setting to optionally include default resources #121

--- a/index.html
+++ b/index.html
@@ -1341,6 +1341,15 @@
                                         <option value="go">Go</option>
                                     </select>
                                 </div>
+                                <br />
+                                <div class="form-group">
+                                    <h5>Default Resources</h5>
+                                    <p>When enabled, this setting will include default resources such as default VPCs and their subnets:</p>
+                                    <div class="checkbox-toggle">
+                                        <input type="checkbox" id="includedefaultresources">
+                                        <label for="includedefaultresources">Include Default Resources</label>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-md-1"></div>
                         </div>
