--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
                             <li><a href="#section-mediaservices-medialive"><span class="lbl">MediaLive</span></a></li>
                             <li><a href="#section-mediaservices-mediapackage"><span class="lbl">MediaPackage</span></a></li>
                             <li><a href="#section-mediaservices-mediastore"><span class="lbl">MediaStore</span></a></li>
+                            <li><a href="#section-mediaservices-interactivevideoservice"><span class="lbl">Interactive Video Service</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub" data-category="machinelearning">
@@ -507,6 +508,7 @@
                             <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
                             <li><a href="#section-internetofthings-events"><span class="lbl">Events</span></a></li>
                             <li><a href="#section-internetofthings-greengrass"><span class="lbl">Greengrass</span></a></li>
+                            <li><a href="#section-internetofthings-sitewise"><span class="lbl">SiteWise</span></a></li>
                             <li><a href="#section-internetofthings-thingsgraph"><span class="lbl">Things Graph</span></a></li>
                         </ul>
                     </li>
@@ -798,7 +800,8 @@
                                                     <a href="#section-mediaservices-mediaconvert" style="font-weight: 600;">MediaConvert</a><br />
                                                     <a href="#section-mediaservices-medialive" style="font-weight: 600;">MediaLive</a><br />
                                                     <a href="#section-mediaservices-mediapackage" style="font-weight: 600;">MediaPackage</a><br />
-                                                    <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a>
+                                                    <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a><br />
+                                                    <a href="#section-mediaservices-interactivevideoservice" style="font-weight: 600;">Interactive Video Service</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -950,6 +953,7 @@
                                                     <a href="#section-internetofthings-analytics" style="font-weight: 600;">Analytics</a><br />
                                                     <a href="#section-internetofthings-events" style="font-weight: 600;">Events</a><br />
                                                     <a href="#section-internetofthings-greengrass" style="font-weight: 600;">Greengrass</a><br />
+                                                    <a href="#section-internetofthings-sitewise" style="font-weight: 600;">SiteWise</a><br />
                                                     <a href="#section-internetofthings-thingsgraph" style="font-weight: 600;">Things Graph</a>
                                                 </td>
                                             </tr>
@@ -1506,7 +1510,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.756.0.min.js"></script>
+        <script src="js/aws-sdk-2.783.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1627,6 +1631,8 @@
         <script src="js/services/lex.js"></script>
         <script src="js/services/codeartifact.js"></script>
         <script src="js/services/timestream.js"></script>
+        <script src="js/services/interactivevideoservice.js"></script>
+        <script src="js/services/iotsitewise.js"></script>
         
         <script src="js/app.js"></script>
     </body>
