--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
                             <li><a href="#section-analytics-lakeformation"><span class="lbl">Lake Formation</span></a></li>
                             <li><a href="#section-analytics-msk"><span class="lbl">MSK</span></a></li>
+                            <li><a href="#section-analytics-databrew"><span class="lbl">DataBrew</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="securityidentityandcompliance">
@@ -836,7 +837,8 @@
                                                     <a href="#section-analytics-datapipeline" style="font-weight: 600;">Data Pipeline</a><br />
                                                     <a href="#section-analytics-glue" style="font-weight: 600;">Glue</a><br />
                                                     <a href="#section-analytics-lakeformation" style="font-weight: 600;">Lake Formation</a><br />
-                                                    <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a>
+                                                    <a href="#section-analytics-msk" style="font-weight: 600;">MSK</a><br />
+                                                    <a href="#section-analytics-databrew" style="font-weight: 600;">DataBrew</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1633,6 +1635,7 @@
         <script src="js/services/timestream.js"></script>
         <script src="js/services/interactivevideoservice.js"></script>
         <script src="js/services/iotsitewise.js"></script>
+        <script src="js/services/databrew.js"></script>
         
         <script src="js/app.js"></script>
     </body>
