--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
                         <ul>
                             <li><a href="#section-other-resourcegroups"><span class="lbl">Resource Groups</span></a></li>
                             <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
+                            <li><a href="#section-other-signer"><span class="lbl">Signer</span></a></li>
                         </ul>
                     </li>
                 </ul>
@@ -981,7 +982,8 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-other-resourcegroups" style="font-weight: 600;">Resource Groups</a><br />
-                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
+                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a><br />
+                                                    <a href="#section-other-signer" style="font-weight: 600;">Signer</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1512,7 +1514,7 @@
 
         <script src="js/deepmerge.js"></script>
 
-        <script src="js/aws-sdk-2.783.0.min.js"></script>
+        <script src="js/aws-sdk-2.799.0.min.js"></script>
         <script src="js/RelationshipTypeMap.js"></script>
 
         <script src="js/deferred-datatable.js"></script>
@@ -1636,6 +1638,7 @@
         <script src="js/services/interactivevideoservice.js"></script>
         <script src="js/services/iotsitewise.js"></script>
         <script src="js/services/databrew.js"></script>
+        <script src="js/services/signer.js"></script>
         
         <script src="js/app.js"></script>
     </body>
