--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
                             <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-securityhub"><span class="lbl">Security Hub</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-detective"><span class="lbl">Detective</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-signer"><span class="lbl">Signer</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="mobile">
@@ -530,7 +531,6 @@
                         <ul>
                             <li><a href="#section-other-resourcegroups"><span class="lbl">Resource Groups</span></a></li>
                             <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
-                            <li><a href="#section-other-signer"><span class="lbl">Signer</span></a></li>
                         </ul>
                     </li>
                 </ul>
@@ -865,7 +865,8 @@
                                                     <a href="#section-securityidentityandcompliance-directoryservice" style="font-weight: 600;">Directory Service</a><br />
                                                     <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a><br />
                                                     <a href="#section-securityidentityandcompliance-securityhub" style="font-weight: 600;">Security Hub</a><br />
-                                                    <a href="#section-securityidentityandcompliance-detective" style="font-weight: 600;">Detective</a>
+                                                    <a href="#section-securityidentityandcompliance-detective" style="font-weight: 600;">Detective</a><br />
+                                                    <a href="#section-securityidentityandcompliance-signer" style="font-weight: 600;">Signer</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -982,8 +983,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-other-resourcegroups" style="font-weight: 600;">Resource Groups</a><br />
-                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a><br />
-                                                    <a href="#section-other-signer" style="font-weight: 600;">Signer</a>
+                                                    <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
                                                 </td>
                                             </tr>
                                         </table>
