--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <li><a href="#section-outputs-cdk"><span class="lbl">CDK</span></a></li>
                         <li><a href="#section-outputs-cdktf"><span class="lbl">CDK (Terraform)</span></a></li>
                         <li><a href="#section-outputs-pulumi"><span class="lbl">Pulumi</span></a></li>
-                        <li><a href="#section-outputs-diagram"><span class="lbl">Diagram</span></a></li>
+                        <!--<li><a href="#section-outputs-diagram"><span class="lbl">Diagram</span></a></li>-->
                         <!--<li><a href="#section-outputs-iam"><span class="lbl">IAM</span></a></li>-->
                         <li><a href="#section-outputs-raw"><span class="lbl">Raw Output (Debug)</span></a></li>
                     </ul>
@@ -1293,7 +1293,7 @@
                                         <option value="cdk">CDK</option>
                                         <option value="cdktf">CDK (Terraform)</option>
                                         <option value="pulumi">Pulumi</option>
-                                        <option value="diagram">Diagram</option>
+                                        <!--<option value="diagram">Diagram</option>-->
                                     </select>
                                 </div>
                                 <br />
@@ -1468,11 +1468,13 @@
                     </div>
                 </section>
 
+                <!--
                 <section id="section-outputs-diagram" data-section-breadcrumb1-title="Outputs" data-section-breadcrumb1-link="#section-outputs-cloudformation" data-section-title="Diagram" data-section-label="Beta" class="former2-section box-typical steps-numeric-block f2mb0" style="display: none;">
                     <div id='diagram_container'>
                         <iframe id="diagramframe" style="width: 100%; height: 100%; border: 0;"></iframe>
                     </div>
                 </section>
+                -->
 
                 <section id="section-outputs-iam" data-section-breadcrumb1-title="Outputs" data-section-breadcrumb1-link="#section-outputs-cloudformation" data-section-title="IAM" class="former2-section" style="display: none;">
                     <div class="alert alert-warning alert-fill fade show" role="alert">
