SageMaker / DevOps Guru additions

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                         <ul>
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                             <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
+                            <li><a href="#section-machinelearning-devopsguru"><span class="lbl">DevOps Guru</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
                         </ul>
@@ -817,6 +818,7 @@
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
                                                     <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
+                                                    <a href="#section-machinelearning-devopsguru" style="font-weight: 600;">DevOps Guru</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a>
                                                 </td>
@@ -1639,6 +1641,7 @@
         <script src="js/services/iotsitewise.js"></script>
         <script src="js/services/databrew.js"></script>
         <script src="js/services/signer.js"></script>
+        <script src="js/services/devopsguru.js"></script>
         
         <script src="js/app.js"></script>
     </body>
