--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
                             <li><a href="#section-applicationintegration-sns"><span class="lbl">SNS</span></a></li>
                             <li><a href="#section-applicationintegration-sqs"><span class="lbl">SQS</span></a></li>
                             <li><a href="#section-applicationintegration-swf"><span class="lbl">SWF</span></a></li>
+                            <li><a href="#section-applicationintegration-mwaa"><span class="lbl">Managed Apache Airflow</span></a></li>
                         </ul>
                     </li>
                     <li class="green with-sub" data-category="awscostmanagement">
@@ -915,7 +916,8 @@
                                                     <a href="#section-applicationintegration-amazonmq" style="font-weight: 600;">Amazon MQ</a><br />
                                                     <a href="#section-applicationintegration-sns" style="font-weight: 600;">SNS</a><br />
                                                     <a href="#section-applicationintegration-sqs" style="font-weight: 600;">SQS</a><br />
-                                                    <a href="#section-applicationintegration-swf" style="font-weight: 600;">SWF</a>
+                                                    <a href="#section-applicationintegration-swf" style="font-weight: 600;">SWF</a><br />
+                                                    <a href="#section-applicationintegration-mwaa" style="font-weight: 600;">Managed Apache Airflow</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1642,6 +1644,7 @@
         <script src="js/services/databrew.js"></script>
         <script src="js/services/signer.js"></script>
         <script src="js/services/devopsguru.js"></script>
+        <script src="js/services/mwaa.js"></script>
         
         <script src="js/app.js"></script>
     </body>
