Finish December CFN updates

--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
                             <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-securityhub"><span class="lbl">Security Hub</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-detective"><span class="lbl">Detective</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-auditmanager"><span class="lbl">Audit Manager</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-signer"><span class="lbl">Signer</span></a></li>
                         </ul>
                     </li>
@@ -869,6 +870,7 @@
                                                     <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a><br />
                                                     <a href="#section-securityidentityandcompliance-securityhub" style="font-weight: 600;">Security Hub</a><br />
                                                     <a href="#section-securityidentityandcompliance-detective" style="font-weight: 600;">Detective</a><br />
+                                                    <a href="#section-securityidentityandcompliance-auditmanager" style="font-weight: 600;">Audit Manager</a><br />
                                                     <a href="#section-securityidentityandcompliance-signer" style="font-weight: 600;">Signer</a>
                                                 </td>
                                             </tr>
@@ -1645,6 +1647,7 @@
         <script src="js/services/signer.js"></script>
         <script src="js/services/devopsguru.js"></script>
         <script src="js/services/mwaa.js"></script>
+        <script src="js/services/auditmanager.js"></script>
         
         <script src="js/app.js"></script>
     </body>
