SDB and other minor bug fixes

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
                             <span class="lbl">Other</span>
                         </span>
                         <ul>
+                            <li><a href="#section-other-simpledb"><span class="lbl">SimpleDB</span></a></li>
                             <li><a href="#section-other-resourcegroups"><span class="lbl">Resource Groups</span></a></li>
                             <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
                         </ul>
@@ -988,6 +989,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-other-simpledb" style="font-weight: 600;">SimpleDB</a><br />
                                                     <a href="#section-other-resourcegroups" style="font-weight: 600;">Resource Groups</a><br />
                                                     <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
                                                 </td>
@@ -1648,6 +1650,7 @@
         <script src="js/services/devopsguru.js"></script>
         <script src="js/services/mwaa.js"></script>
         <script src="js/services/auditmanager.js"></script>
+        <script src="js/services/simpledb.js"></script>
         
         <script src="js/app.js"></script>
     </body>
