Full updates for 8 Jan

--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-mediaservices-elastictranscoder"><span class="lbl">Elastic Transcoder</span></a></li>
+                            <li><a href="#section-mediaservices-mediaconnect"><span class="lbl">MediaConnect</span></a></li>
                             <li><a href="#section-mediaservices-mediaconvert"><span class="lbl">MediaConvert</span></a></li>
                             <li><a href="#section-mediaservices-medialive"><span class="lbl">MediaLive</span></a></li>
                             <li><a href="#section-mediaservices-mediapackage"><span class="lbl">MediaPackage</span></a></li>
@@ -803,6 +804,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-mediaservices-elastictranscoder" style="font-weight: 600;">Elastic Transcoder</a><br />
+                                                    <a href="#section-mediaservices-mediaconnect" style="font-weight: 600;">MediaConnect</a><br />
                                                     <a href="#section-mediaservices-mediaconvert" style="font-weight: 600;">MediaConvert</a><br />
                                                     <a href="#section-mediaservices-medialive" style="font-weight: 600;">MediaLive</a><br />
                                                     <a href="#section-mediaservices-mediapackage" style="font-weight: 600;">MediaPackage</a><br />
@@ -1651,6 +1653,7 @@
         <script src="js/services/mwaa.js"></script>
         <script src="js/services/auditmanager.js"></script>
         <script src="js/services/simpledb.js"></script>
+        <script src="js/services/mediaconnect.js"></script>
         
         <script src="js/app.js"></script>
     </body>
