Add Lookout For Vision

--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
                             <li><a href="#section-machinelearning-devopsguru"><span class="lbl">DevOps Guru</span></a></li>
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
+                            <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="analytics">
@@ -825,7 +826,8 @@
                                                     <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a><br />
                                                     <a href="#section-machinelearning-devopsguru" style="font-weight: 600;">DevOps Guru</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
-                                                    <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a>
+                                                    <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
+                                                    <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1654,6 +1656,7 @@
         <script src="js/services/auditmanager.js"></script>
         <script src="js/services/simpledb.js"></script>
         <script src="js/services/mediaconnect.js"></script>
+        <script src="js/services/lookoutforvision.js"></script>
         
         <script src="js/app.js"></script>
     </body>
