--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <a class="dropdown-item region-item" data-region="af-south-1">Africa (Cape Town)</a>
                                         <a class="dropdown-item region-item" data-region="ap-east-1">Asia Pacific (Hong Kong)</a>
                                         <a class="dropdown-item region-item" data-region="ap-south-1">Asia Pacific (Mumbai)</a>
-                                        <a class="dropdown-item region-item" data-region="ap-northeast-3">Asia Pacific (Osaka-Local)</a>
+                                        <a class="dropdown-item region-item" data-region="ap-northeast-3">Asia Pacific (Osaka)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-2">Asia Pacific (Seoul)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-1">Asia Pacific (Singapore)</a>
                                         <a class="dropdown-item region-item" data-region="ap-southeast-2">Asia Pacific (Sydney)</a>
