--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                             <li><a href="#section-developertools-codepipeline"><span class="lbl">CodePipeline</span></a></li>
                             <li><a href="#section-developertools-cloud9"><span class="lbl">Cloud9</span></a></li>
                             <li><a href="#section-developertools-xray"><span class="lbl">X-Ray</span></a></li>
+                            <li><a href="#section-developertools-fis"><span class="lbl">FIS</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="robotics">
@@ -752,7 +753,8 @@
                                                     <a href="#section-developertools-codedeploy" style="font-weight: 600;">CodeDeploy</a><br />
                                                     <a href="#section-developertools-codepipeline" style="font-weight: 600;">CodePipeline</a><br />
                                                     <a href="#section-developertools-cloud9" style="font-weight: 600;">Cloud9</a><br />
-                                                    <a href="#section-developertools-xray" style="font-weight: 600;">X-Ray</a>
+                                                    <a href="#section-developertools-xray" style="font-weight: 600;">X-Ray</a><br />
+                                                    <a href="#section-developertools-fis" style="font-weight: 600;">FIS</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1676,6 +1678,7 @@
         <script src="js/services/simpledb.js"></script>
         <script src="js/services/mediaconnect.js"></script>
         <script src="js/services/lookoutforvision.js"></script>
+        <script src="js/services/fis.js"></script>
         
         <script src="js/app.js"></script>
     </body>
