Partial updates, new category

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
                             <li><a href="#section-machinelearning-kendra"><span class="lbl">Kendra</span></a></li>
                             <li><a href="#section-machinelearning-lex"><span class="lbl">Lex</span></a></li>
                             <li><a href="#section-machinelearning-lookoutforvision"><span class="lbl">Lookout For Vision</span></a></li>
+                            <li><a href="#section-machinelearning-lookoutformetrics"><span class="lbl">Lookout For Metrics</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="analytics">
@@ -492,14 +493,14 @@
                             <li><a href="#section-awscostmanagement-budgets"><span class="lbl">Budgets</span></a></li>
                         </ul>
                     </li>
-                    <li class="blue with-sub" data-category="customerengagement">
+                    <li class="blue with-sub" data-category="businessapplications">
                         <span>
-                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Arch-Category_Customer-Enablement_64.png" style="width: 16px; height: 16px;" /></i>
-                            <span class="lbl">Customer Engagement</span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Arch-Category_Business-Applications_64.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Business Applications</span>
                         </span>
                         <ul>
-                            <li><a href="#section-customerengagement-pinpoint"><span class="lbl">Pinpoint</span></a></li>
-                            <li><a href="#section-customerengagement-ses"><span class="lbl">SES</span></a></li>
+                            <li><a href="#section-businessapplications-pinpoint"><span class="lbl">Pinpoint</span></a></li>
+                            <li><a href="#section-businessapplications-ses"><span class="lbl">SES</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="endusercomputing">
@@ -848,7 +849,8 @@
                                                     <a href="#section-machinelearning-devopsguru" style="font-weight: 600;">DevOps Guru</a><br />
                                                     <a href="#section-machinelearning-kendra" style="font-weight: 600;">Kendra</a><br />
                                                     <a href="#section-machinelearning-lex" style="font-weight: 600;">Lex</a><br />
-                                                    <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a>
+                                                    <a href="#section-machinelearning-lookoutforvision" style="font-weight: 600;">Lookout For Vision</a><br />
+                                                    <a href="#section-machinelearning-lookoutformetrics" style="font-weight: 600;">Lookout For Metrics</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -951,14 +953,14 @@
                                         </table>
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
-                                                <td><img src="img/aws/Arch-Category_Customer-Enablement_64.png" style="width: 44px; height: 44px; padding: 2px;" /></td>
-                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Customer Engagement</h4></td>
+                                                <td><img src="img/aws/Arch-Category_Business-Applications_64.png" style="width: 44px; height: 44px; padding: 2px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Business Applications</h4></td>
                                             </tr>
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
-                                                    <a href="#section-customerengagement-pinpoint" style="font-weight: 600;">Pinpoint</a><br />
-                                                    <a href="#section-customerengagement-ses" style="font-weight: 600;">SES</a>
+                                                    <a href="#section-businessapplications-pinpoint" style="font-weight: 600;">Pinpoint</a><br />
+                                                    <a href="#section-businessapplications-ses" style="font-weight: 600;">SES</a>
                                                 </td>
                                             </tr>
                                         </table>
